MPDX-5239 collapse chevron fixes (#1232)

--- a/src/common/filters/_filters.scss
+++ b/src/common/filters/_filters.scss
@@ -138,7 +138,8 @@
                     margin-left: 10px;
                 }
             }
-            .fa-chevron-down {
+            .fa-chevron-up {
+                margin-left: 10px;
                 transition: transform 0.2s ease-out;
             }
             > div {
